# funding-agent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.web  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1466071c64e1_baseline.py  4714f5d96165_consolidate_schema.py  52886e4f11fd_fix_day_of_week_default_and_migrate_.py  58b957aa7ad0_baseline.py  e2d289f55838_reconcile_drift.py
conf/: config.yaml  email.yaml  email.yaml.example  filter.yaml
conf/sources/: compute.yaml  government.yaml  industry.yaml  university.yaml
docs/: funding_sources.md  gpu_hpc_computing_programs.md  index.html
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
launchd/: com.boyu.funding-agent.backup.plist  com.boyu.funding-agent.daily.plist  com.boyu.funding-agent.email.plist  com.boyu.funding-agent.fetch.plist  com.boyu.funding-agent.weekly.plist
plan/: implementation-plan.md
scripts/: email_now.sh  fetch_now.sh  install.sh  migrate_state_db.py  start_platform.sh  uninstall.sh
src/: daily_fetch.py  emailer.py  history_generator.py  models.py  state.py  summarizer.py  utils.py  weekly_email.py  weekly_fetch.py
src/fetcher/: __init__.py  base.py  grants_gov.py  nih.py  nsf.py  opportunity_validator.py  sam_gov.py  web_scraper.py
src/filter/: __init__.py  keyword_filter.py  llm_filter.py
templates/: digest.html  history.html
tests/: conftest.py  test_auto_scorer.py  test_broadcast.py  test_cli.py  test_email_compose_adapter.py  test_email_dispatcher.py  test_email_scheduler_due_logic.py  test_emailer.py  test_fetch_runner.py  test_fetchers.py  test_filter.py  test_history_data_source.py  test_keyword_sync.py  test_migration.py  test_models_import.py  test_opportunity_writer.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_sqlite_pragmas.py
web/: cli.py  config.py  database.py  dependencies.py  main.py  middleware.py
web/models/: __init__.py  broadcast.py  (+12 more)
(+61 files in other folders)
